# audact

./: Cargo.toml  README.md
examples/: docs.rs  main.rs  patterns.rs  proc.rs  tone.rs
src/: lib.rs  notes.rs  pitchers.rs  system.rs  waves.rs
