[package]
name = "audact"
version = "0.5.1"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/audact"
homepage = "https://github.com/shockham/audact"
documentation = "https://docs.rs/audact"
description = "Minimalist synth and sequencing lib"
edition = "2021"

[dependencies]
rand = "0.8.5"
rodio = { version = "0.16.0", default-features = false }
derive_builder = "0.12.0"
